# EmacsMongoMode

./: .gitignore
helper/: CMakeLists.txt  Makefile
helper/src/: CMakeLists.txt  helper.cpp
